k8s/base/generated.yaml
---
# Source: koldavar-chart/templates/services/audio-to-text.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-to-text-service
spec:
  type: ClusterIP
  selector:
    app: audio-to-text
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# Source: koldavar-chart/templates/services/input-extraction.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: input-extraction-service
spec:
  selector:
    app: input-extraction
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
---
# Source: koldavar-chart/templates/services/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis-service
spec:
  ports:
  - port: 8085
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
status:
  loadBalancer: {}
---
# Source: koldavar-chart/templates/services/sync-manager.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sync-manager-service
spec:
  selector:
    app: sync-manager
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
---
# Source: koldavar-chart/templates/services/text-synthesizer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-synthesizer-service
spec:
  selector:
    app: text-synthesizer
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
---
# Source: koldavar-chart/templates/deployments/audio-to-text.deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audio-to-text
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audio-to-text
  template:
    metadata:
      labels:
        app: audio-to-text
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: audio-to-text
          image: omriwallach/koldavar:audio_to_text
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
# Source: koldavar-chart/templates/deployments/input-extraction.deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: input-extraction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: input-extraction
  template:
    metadata:
      labels:
        app: input-extraction
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: input-extraction
          image: omriwallach/koldavar:input_extraction
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
# Source: koldavar-chart/templates/deployments/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        name: redis
        resources: {}
status: {}
---
# Source: koldavar-chart/templates/deployments/sync-manager.deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sync-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sync-manager
  template:
    metadata:
      labels:
        app: sync-manager
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: sync-manager
          image: "omriwallach/koldavar:sync_manager:"
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
# Source: koldavar-chart/templates/deployments/text-synthesizer.deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-synthesizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-synthesizer
  template:
    metadata:
      labels:
        app: text-synthesizer
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: text-synthesizer
          image: omriwallach/koldavar:text_synthesizer
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
---
# Source: koldavar-chart/templates/network/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# Source: koldavar-chart/templates/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koldavar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /audio-to-text
            pathType: Prefix
            backend:
              service:
                name: audio-to-text-service
                port:
                  number: 8080

          - path: /input-extraction
            pathType: Prefix
            backend:
              service:
                name: input-extraction-service
                port:
                  number: 8081

          - path: /sync-manager
            pathType: Prefix
            backend:
              service:
                name: sync-manager-service
                port:
                  number: 8082

          - path: /text-synthesizer
            pathType: Prefix
            backend:
              service:
                name: text-synthesizer-service
                port:
                  number: 8083
